--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -8,64 +8,65 @@
     <div class='empty'></div>
 
     <div class='elementData card' [hidden]="!currentTrack || currentTrack.features[0].geometry.coordinates.length < 2">
-      <table *ngIf="currentTrack">
-        <tr [ngClass]="status">
-          <td colspan='2'>{{'CANVAS.CURFILE' | translate}}</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.DISTANCE' | translate}}</td>
-          <td >{{currentTrack.features[0].properties.totalDistance | number:'1.3' }} km</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.EGAIN' | translate}}</td>
-          <td>{{currentTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.ELOSS' | translate}}</td>
-          <td>{{currentTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.TIME' | translate}}</td>
-          <td>{{currentTrack.features[0].properties.totalTime}}</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.MOTIONTIME' | translate }}</td>
-          <td>{{ currentMotionTime }}</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.POINTS' | translate}}</td>
-          <td>{{currentTrack.features[0].properties.totalNumber}}</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.ALTITUDE' | translate}}</td>
-          <td *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">
-            {{ currentTrack.features[0].properties.currentAltitude | number:'1.0-0' }} m</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.SPEED' | translate}}</td>
-          <td>
-            <div *ngIf="currentTrack.features[0].properties.currentAltitude !== undefined">
-              {{ currentTrack.features[0].properties.currentSpeed | number:'1.1-1' }} km/h
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.AVGSPEED' | translate}}</td>
-          <td>
-            <div *ngIf="currentAverageSpeed != undefined">
-              {{currentAverageSpeed | number:'1.1-1'}} km/h
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.MOTIONAVGSPEED' | translate}}</td>
-          <td>
-            <div *ngIf="currentMotionSpeed != undefined">
-              {{currentMotionSpeed | number:'1.1-1'}} km/h
-            </div>
-          </td>
-        </tr>
-      </table>
+      @if (currentTrack) {
+        <table>
+          <tr [ngClass]="status">
+            <td colspan="2">{{ 'CANVAS.CURFILE' | translate }}</td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.DISTANCE' | translate }}</td>
+            <td>{{ currentTrack.features[0].properties.totalDistance | number: '1.3' }} km</td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.EGAIN' | translate }}</td>
+            <td>{{ currentTrack.features[0].properties.totalDistance | number: '1.3' }} km</td>
+          </tr>
+            <td>{{ 'CANVAS.ELOSS' | translate }}</td>
+            <td>{{ currentTrack.features[0].properties.totalElevationLoss | number: '1.0-0' }} m</td>
+          <tr>
+            <td>{{ 'CANVAS.TIME' | translate }}</td>
+            <td>{{ currentTrack.features[0].properties.totalTime }}</td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.MOTIONTIME' | translate }}</td>
+            <td>{{ currentMotionTime }}</td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.POINTS' | translate }}</td>
+            <td>{{ currentTrack.features[0].properties.totalNumber }}</td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.ALTITUDE' | translate }}</td>
+            @if (currentTrack.features[0].properties.currentAltitude !== undefined) {
+              <td>{{ currentTrack.features[0].properties.currentAltitude | number: '1.0-0' }} m</td>
+            }
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.SPEED' | translate }}</td>
+            <td>
+              @if (currentTrack.features[0].properties.currentAltitude !== undefined) {
+                <div>{{ currentTrack.features[0].properties.currentSpeed | number: '1.1-1' }} km/h</div>
+              }
+            </td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.AVGSPEED' | translate }}</td>
+            <td>
+              @if (currentAverageSpeed !== undefined) {
+                <div>{{ currentAverageSpeed | number: '1.1-1' }} km/h</div>
+              }
+            </td>
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.MOTIONAVGSPEED' | translate }}</td>
+            <td>
+              @if (currentMotionSpeed !== undefined) {
+                <div>{{ currentMotionSpeed | number: '1.1-1' }} km/h</div>
+              }
+            </td>
+          </tr>
+        </table>
+      }
     </div>
 
     <div class='elementCanvas' id='cc0' [hidden]="!currentTrack || currentTrack.features[0].geometry.coordinates.length < 2">
@@ -89,42 +90,52 @@
     <div class='empty'></div>
 
     <div class='elementData card' [hidden]="!archivedTrack || layerVisibility != 'archived'">
-      <table *ngIf="archivedTrack">
-        <tr>
-          <td colspan='2'>{{'CANVAS.ARCTITLE' | translate}}</td>
-        </tr>
-        <tr>
-          <td colspan='2'>{{archivedTrack.features[0].properties.name}}</td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.DISTANCE' | translate}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalDistance > -1">
-            {{archivedTrack.features[0].properties.totalDistance | number:'1.3'}} km
-          </td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.EGAIN' | translate}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalElevationGain > -1">
-            {{archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0'}} m
-          </td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.ELOSS' | translate}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalElevationLoss > -1">
-            {{archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0'}} m
-          </td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.TIME' | translate}}</td>
-          <td *ngIf="archivedTrack.features[0].properties.totalTime !== undefined">
-            {{archivedTrack.features[0].properties.totalTime}}
-          </td>
-        </tr>
-        <tr>
-          <td>{{'CANVAS.POINTS' | translate}}</td>
-          <td>{{archivedTrack.features[0].properties.totalNumber}}</td>
-        </tr>
-      </table>
+      @if (archivedTrack) {
+        <table>
+          <tr>
+            <td colspan='2'>{{'CANVAS.ARCTITLE' | translate}}</td>
+          </tr>
+          <tr>
+            <td colspan='2'>{{archivedTrack.features[0].properties.name}}</td>
+          </tr>
+          <tr>
+            <td>{{'CANVAS.DISTANCE' | translate}}</td>
+            @if (archivedTrack.features[0].properties.totalDistance > -1) {
+              <td>
+                {{ archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km
+              </td>
+            }
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.EGAIN' | translate }}</td>
+            @if (archivedTrack.features[0].properties.totalElevationGain > -1) {
+              <td>
+                {{ archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m
+              </td>
+            }
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.ELOSS' | translate }}</td>
+            @if (archivedTrack.features[0].properties.totalElevationLoss > -1) {
+              <td>
+                {{ archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m
+              </td>
+            }
+          </tr>
+          <tr>
+            <td>{{ 'CANVAS.TIME' | translate }}</td>
+            @if (archivedTrack.features[0].properties.totalTime !== undefined) {
+              <td>
+                {{ archivedTrack.features[0].properties.totalTime }}
+              </td>
+            }
+          </tr>
+          <tr>
+            <td>{{'CANVAS.POINTS' | translate}}</td>
+            <td>{{archivedTrack.features[0].properties.totalNumber}}</td>
+          </tr>
+        </table>
+      }
     </div>
 
     <div class='elementCanvas' id='ac0' [hidden]="!archivedTrack || layerVisibility != 'archived'">
