--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -1,145 +1,139 @@
 <ion-content>
 
-<!-- Language selector -->
-<ion-item lines="none" class="top-margin-selector">
-  <ion-label>{{'SETTINGS.LANGUAGE' | translate}}</ion-label>
-  <ion-select
-    [value]="selectedLanguage.code"
-    (ionChange)="onLanguageChange($event.detail.value)"
-    interface="popover"
-    slot="end"
-  >
-    <ion-select-option *ngFor="let lang of languages" [value]="lang.code">
-      {{ lang.name }}
-    </ion-select-option>
-  </ion-select>
-</ion-item>
+  <!-- Language selector -->
+  <ion-item lines="none" class="top-margin-selector">
+    <ion-label>{{ 'SETTINGS.LANGUAGE' | translate }}</ion-label>
+    <ion-select
+      [value]="selectedLanguage.code"
+      (ionChange)="onLanguageChange($event.detail.value)"
+      interface="popover"
+      slot="end"
+    >
+      @for (lang of languages; track lang.code) {
+        <ion-select-option [value]="lang.code">{{ lang.name }}</ion-select-option>
+      }
+    </ion-select>
+  </ion-item>
 
-<!-- Map selector -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{'SETTINGS.BASE_MAP' | translate}}</ion-label>
-  <ion-select
-    [value]="selectedMap"
-    (ionChange)="onMapChange($event.detail.value)"
-    interface="popover"
-    slot="end"
-  >
-    <ion-select-option *ngFor="let map of baseMaps" [value]="map">
-      {{ map }}
-    </ion-select-option>
-  </ion-select>
-</ion-item>
+  <!-- Map selector -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.BASE_MAP' | translate }}</ion-label>
+    <ion-select
+      [value]="selectedMap"
+      (ionChange)="onMapChange($event.detail.value)"
+      interface="popover"
+      slot="end"
+    >
+      @for (map of baseMaps; track map) {
+        <ion-select-option [value]="map">{{ map }}</ion-select-option>
+      }
+    </ion-select>
+  </ion-item>
 
-<!-- Current track color selection -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{ 'SETTINGS.CURRENT_TRACK' | translate }}</ion-label>
-  <ion-button fill="clear" (click)="openColorPopover($event, 'current')">
-    <div class="color-display">
-      <div class="color-line" [ngStyle]="{ 'background-color': currentColor }"></div>
-      <div class="triangle" [ngStyle]="{ 'border-top-color': 'gray' }"></div>
-    </div>
-  </ion-button>
-</ion-item>
+  <!-- Current track color selection -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.CURRENT_TRACK' | translate }}</ion-label>
+    <ion-button fill="clear" (click)="openColorPopover($event, 'current')">
+      <div class="color-display">
+        <div class="color-line" [ngStyle]="{ 'background-color': currentColor }"></div>
+        <div class="triangle" [ngStyle]="{ 'border-top-color': 'gray' }"></div>
+      </div>
+    </ion-button>
+  </ion-item>
 
-<!-- Archived track color selection -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{ 'SETTINGS.REFERENCE_TRACK' | translate }}</ion-label>
-  <ion-button fill="clear" (click)="openColorPopover($event, 'archived')">
-    <div class="color-display">
-      <div class="color-line" [ngStyle]="{ 'background-color': archivedColor }"></div>
-      <div class="triangle" [ngStyle]="{ 'border-top-color': 'gray' }"></div>
-    </div>
-  </ion-button>
-</ion-item>
+  <!-- Archived track color selection -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.REFERENCE_TRACK' | translate }}</ion-label>
+    <ion-button fill="clear" (click)="openColorPopover($event, 'archived')">
+      <div class="color-display">
+        <div class="color-line" [ngStyle]="{ 'background-color': archivedColor }"></div>
+        <div class="triangle" [ngStyle]="{ 'border-top-color': 'gray' }"></div>
+      </div>
+    </ion-button>
+  </ion-item>
 
-<!-- Audio alert on / off -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{'SETTINGS.AUDIO_ALERT' | translate}}</ion-label>
-  <ion-select
-    [value]="selectedAudioAlert"
-    (ionChange)="onAudioAlertChange($event.detail.value)"
-    interface="popover"
-    slot="end"
-  >
-    <ion-select-option *ngFor="let alert of alerts" [value]="alert">
-      {{ alert }}
-    </ion-select-option>
-  </ion-select>
-</ion-item>
+  <!-- Audio alert on / off -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.AUDIO_ALERT' | translate }}</ion-label>
+    <ion-select
+      [value]="selectedAudioAlert"
+      (ionChange)="onAudioAlertChange($event.detail.value)"
+      interface="popover"
+      slot="end"
+    >
+      @for (alert of alerts; track alert) {
+        <ion-select-option [value]="alert">{{ alert }}</ion-select-option>
+      }
+    </ion-select>
+  </ion-item>
 
-<!-- Altitude method selector -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{'SETTINGS.SAVED_TRACK_ALTITUDE' | translate}}</ion-label>
-  <ion-select
-    [value]="selectedAltitude"
-    (ionChange)="onAltitudeChange($event.detail.value)"
-    interface="popover"
-    slot="end"
-  >
-    <ion-select-option *ngFor="let altitude of altitudes" [value]="altitude">
-      {{ altitude }}
-    </ion-select-option>
-  </ion-select>
-</ion-item>
+  <!-- Altitude method selector -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.SAVED_TRACK_ALTITUDE' | translate }}</ion-label>
+    <ion-select
+      [value]="selectedAltitude"
+      (ionChange)="onAltitudeChange($event.detail.value)"
+      interface="popover"
+      slot="end"
+    >
+      @for (altitude of altitudes; track altitude) {
+        <ion-select-option [value]="altitude">{{ altitude }}</ion-select-option>
+      }
+    </ion-select>
+  </ion-item>
 
-<!-- Upload offline maps -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{'SETTINGS.UPLOAD_MAPS' | translate}}</ion-label>
-  <ion-select
-    [value]=""
-    (ionChange)="onMapUploadChange($event.detail.value)"
-    interface="popover"
-    slot="end"
-  >
-    <ion-select-option *ngFor="let map of missingOfflineMaps" [value]="map">
-      {{ map }}
-    </ion-select-option>
-  </ion-select>
-</ion-item>
+  <!-- Upload offline maps -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.UPLOAD_MAPS' | translate }}</ion-label>
+    <ion-select
+      [value]=""
+      (ionChange)="onMapUploadChange($event.detail.value)"
+      interface="popover"
+      slot="end"
+    >
+      @for (map of missingOfflineMaps; track map) {
+        <ion-select-option [value]="map">{{ map }}</ion-select-option>
+      }
+    </ion-select>
+  </ion-item>
 
-<!-- Remove offline maps -->
-<ion-item lines="none" class="selector">
-  <ion-label>{{'SETTINGS.REMOVE_MAPS' | translate}}</ion-label>
-  <ion-select
-    [value]=""
-    (ionChange)="onMapRemoveChange($event.detail.value)"
-    interface="popover"
-    slot="end"
-  >
-    <ion-select-option *ngFor="let map of availableOfflineMaps" [value]="map">
-      {{ map }}
-    </ion-select-option>
-  </ion-select>
-</ion-item>
+  <!-- Remove offline maps -->
+  <ion-item lines="none" class="selector">
+    <ion-label>{{ 'SETTINGS.REMOVE_MAPS' | translate }}</ion-label>
+    <ion-select
+      [value]=""
+      (ionChange)="onMapRemoveChange($event.detail.value)"
+      interface="popover"
+      slot="end"
+    >
+      @for (map of availableOfflineMaps; track map) {
+        <ion-select-option [value]="map">{{ map }}</ion-select-option>
+      }
+    </ion-select>
+  </ion-item>
 
   <!-- 🔹 Show progress bar only when downloading -->
-  <ng-container *ngIf="isDownloading">
+  @if (isDownloading) {
     <ion-progress-bar [value]="downloadProgress / 100"></ion-progress-bar>
     <p>{{ downloadProgress }}% downloaded</p>
-  </ng-container>
+  }
 
 </ion-content>
 
-  <!-- space for android controls -->
-  <div class="bottom-safe-gray"></div>
+<!-- space for android controls -->
+<div class="bottom-safe-gray"></div>
 
-  <!-- Navigation buttons -->
-  <ion-fab
-    slot="fixed"
-    horizontal="center"
-    vertical="bottom"
-    class="bottom-safe"
-  >
-    <ion-row>
-      <ion-fab-button id='databutton' (click)="fs.gotoPage('tab1')">
-        <ion-icon name="earth"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button id='databutton' (click)="fs.gotoPage('canvas')">
-        <ion-icon name="analytics"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button id='list' (click)="fs.gotoPage('archive')">
-        <ion-icon name="list"></ion-icon>
-      </ion-fab-button>
-    </ion-row>
-  </ion-fab>
-
+<!-- Navigation buttons -->
+<ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
+  <ion-row>
+    <ion-fab-button id="databutton" (click)="fs.gotoPage('tab1')">
+      <ion-icon name="earth"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button id="databutton" (click)="fs.gotoPage('canvas')">
+      <ion-icon name="analytics"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button id="list" (click)="fs.gotoPage('archive')">
+      <ion-icon name="list"></ion-icon>
+    </ion-fab-button>
+  </ion-row>
+</ion-fab>
