--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,6 @@
 
   <!-- buttons to select start / stop recording or save track -->
 
-
-
   <ion-fab slot="fixed" horizontal="center" vertical="top">
     <ion-row>
       @if (state == 'inactive') {
@@ -47,6 +45,7 @@
     <div id="map-wrapper">
       <div id="map"></div>
     </div>
+    <div class="safe-area"></div>
   </ion-content>
 
   <!-- space for android controls -->
