--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -25,7 +25,7 @@ ion-fab-button {
 #map {
   width: 100%;
   height: 100%;
-  padding-bottom: env(safe-area-inset-bottom);
+  //padding-bottom: env(safe-area-inset-bottom);
   box-sizing: border-box;
 }
 
@@ -106,3 +106,23 @@ ion-fab-button {
     background-color: white;
   }
 
+
+  .bottom {
+    bottom: 50px; /* same as map-wrapper’s reserved space */
+  }
+
+  /*
+  .bottom-safe-gray {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: env(safe-area-inset-bottom);
+    background-color: var(--ion-color-step-50);
+  }
+
+ion-content {
+  --padding-bottom: var(--ion-safe-area-bottom);
+}
+
+  */
