--- a/src/app/edit-modal/edit-modal.component.html
+++ b/src/app/edit-modal/edit-modal.component.html
@@ -81,7 +81,7 @@
       </ion-button>
       <br />
       <ion-button slot:end class="modal-cancel-button" (click)="dismissWithAction('cancel')">
-        {{ cancel }}
+        {{ 'EDIT_MODAL.CANCEL' | translate }}
       </ion-button>
     </ion-buttons>
   } @else {
