--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -65,6 +65,20 @@
               }
             </td>
           </tr>
+          @if (status == 'green' && archivedTrack && currentPoint) {
+            <tr>
+              <td>{{ 'CANVAS.FROM_START' | translate }}</td>
+              <td>
+                <div>{{ archivedTrack.features[0].geometry.properties.data[currentPoint].distance | number: '1.3' }} km</div>
+              </td>
+            </tr>
+            <tr>
+              <td>{{ 'CANVAS.TO_END' | translate }}</td>
+              <td>
+                <div>{{ archivedTrack.features[0].properties.totalDistance - archivedTrack.features[0].geometry.properties.data[currentPoint].distance | number: '1.3' }} km</div>
+              </td>
+            </tr>
+          }
         </table>
       }
     </div>
