--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,12 +3,12 @@
 
   <ion-fab slot="fixed" horizontal="center" vertical="top" class="top-safe" >
     <ion-row>
-      @if (state == 'inactive') {
+      @if (ts.state == 'inactive') {
         <ion-fab-button id="start" (click)="startTracking()">
           <ion-icon name="play"></ion-icon>
         </ion-fab-button>
       }
-      @if (state == 'tracking') {
+      @if (ts.state == 'tracking') {
         <ion-fab-button id="stop" (click)="confirm('stop')">
           <ion-icon name="pause"></ion-icon>
         </ion-fab-button>
@@ -16,12 +16,12 @@
       <ion-fab-button id="alert" (click)="waypoint()">
         <ion-icon name="alert"></ion-icon>
       </ion-fab-button>
-      @if (state == 'stopped') {
+      @if (ts.state == 'stopped') {
         <ion-fab-button id="save" (click)="setTrackDetails()">
           <ion-icon name="save"></ion-icon>
         </ion-fab-button>
       }
-      @if (state === 'stopped' || state === 'saved') {
+      @if (ts.state === 'stopped' || ts.state === 'saved') {
         <ion-fab-button id="trash" (click)="confirm('delete')">
           <ion-icon name="trash"></ion-icon>
         </ion-fab-button>
