--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -19,7 +19,7 @@
   <ion-item lines="none" class="selector">
     <ion-label>{{ 'SETTINGS.BASE_MAP' | translate }}</ion-label>
     <ion-select
-      [value]="selectedMap"
+      [value]="fs.mapProvider"
       (ionChange)="onMapChange($event.detail.value)"
       interface="popover"
       slot="end"
@@ -35,7 +35,7 @@
     <ion-label>{{ 'SETTINGS.CURRENT_TRACK' | translate }}</ion-label>
     <ion-button fill="clear" (click)="openColorPopover($event, 'current')">
       <div class="color-display">
-        <div class="color-line" [ngStyle]="{ 'background-color': currentColor }"></div>
+        <div class="color-line" [ngStyle]="{ 'background-color': fs.currentColor }"></div>
         <div class="triangle" [ngStyle]="{ 'border-top-color': 'gray' }"></div>
       </div>
     </ion-button>
@@ -46,7 +46,7 @@
     <ion-label>{{ 'SETTINGS.REFERENCE_TRACK' | translate }}</ion-label>
     <ion-button fill="clear" (click)="openColorPopover($event, 'archived')">
       <div class="color-display">
-        <div class="color-line" [ngStyle]="{ 'background-color': archivedColor }"></div>
+        <div class="color-line" [ngStyle]="{ 'background-color': fs.archivedColor }"></div>
         <div class="triangle" [ngStyle]="{ 'border-top-color': 'gray' }"></div>
       </div>
     </ion-button>
@@ -56,7 +56,7 @@
   <ion-item lines="none" class="selector">
     <ion-label>{{ 'SETTINGS.ALERT' | translate }}</ion-label>
     <ion-select
-      [value]="selectedAlert"
+      [value]="fs.alert"
       (ionChange)="onAlertChange($event.detail.value)"
       interface="popover"
       slot="end"
@@ -71,7 +71,7 @@
   <ion-item lines="none" class="selector">
     <ion-label>{{ 'SETTINGS.AUDIO_ALERT' | translate }}</ion-label>
     <ion-select
-      [value]="selectedAudioAlert"
+      [value]="fs.audioAlert"
       (ionChange)="onAudioAlertChange($event.detail.value)"
       interface="popover"
       slot="end"
@@ -86,7 +86,7 @@
   <ion-item lines="none" class="selector">
     <ion-label>{{ 'SETTINGS.GEOCODING' | translate }}</ion-label>
     <ion-select
-      [value]="selectedGeocodingService"
+      [value]="fs.geocoding"
       (ionChange)="onGeocodingServiceChange($event.detail.value)"
       interface="popover"
       slot="end"
@@ -101,7 +101,7 @@
   <ion-item lines="none" class="selector">
     <ion-label>{{ 'SETTINGS.SAVED_TRACK_ALTITUDE' | translate }}</ion-label>
     <ion-select
-      [value]="selectedAltitude"
+      [value]="fs.selectedAltitude"
       (ionChange)="onAltitudeChange($event.detail.value)"
       interface="popover"
       slot="end"
