--- a/src/app/search-modal/search-modal.component.html
+++ b/src/app/search-modal/search-modal.component.html
@@ -98,7 +98,7 @@
   @if (loading) {
     <ion-row class="spinner-row">
       <ion-col>
-        <ion-spinner class="center-spinner" color="dark"></ion-spinner>
+         <ion-icon name="hourglass-outline" size="large" color="dark"></ion-icon>
       </ion-col>
     </ion-row>
   }
