--- a/src/app/search-modal/search-modal.component.html
+++ b/src/app/search-modal/search-modal.component.html
@@ -97,8 +97,8 @@
 
   @if (loading) {
     <ion-row class="spinner-row">
-      <ion-col>
-         <ion-icon name="hourglass-outline" size="large" color="dark"></ion-icon>
+      <ion-col class="ion-text-center">
+        <span class="sandclock">⏳</span>
       </ion-col>
     </ion-row>
   }
